fix word-wrap

--- a/index.css
+++ b/index.css
@@ -31,6 +31,11 @@ body {
 	margin-right: 1vw;
 }
 
+.stdout {
+	margin: 0;
+	white-space: pre-wrap;
+}
+
 .dir {
 	color: #d48517;
 }
@@ -42,6 +47,8 @@ body {
 #scroll-area {
 	overflow-y: scroll;
 	height: calc(100% - 4vh);
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 footer {
